Limit min width of app

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,6 +8,13 @@ body {
 .App {
   margin-right: calc(100% - 100vw);
   padding-top: 40px;
+  min-width: 400px;
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    overflow-x: auto;
+  }
 }
 
 .App .ant-tabs-nav {
