--- a/src/components/ColumnSelectionStep.css
+++ b/src/components/ColumnSelectionStep.css
@@ -1,37 +1,55 @@
-.ColumnSelectionStep-columns {
+/* ColumnSelectionStep */
+
+.ColumnSelectionStep-table {
   border-collapse: collapse;
 }
 
-.ColumnSelectionStep-columns tr {
+.ColumnSelectionStep-table tr {
   border: 1px solid #f0f0f0;
 }
 
-.ColumnSelectionStep-columns thead th {
+.ColumnSelectionStep-th-name,
+.ColumnSelectionStep-th-switch {
   padding: 8px;
 }
 
-.ColumnSelectionStep-column-name {
+.ColumnSelectionStep-th-generalization,
+.ColumnSelectionStep-th-clear-generalization,
+.ColumnSelectionStep-td-generalization,
+.ColumnSelectionStep-td-clear-generalization {
+  padding: 0;
+}
+
+.ColumnSelectionStep-td-name {
   min-width: 200px;
   padding: 8px 16px;
 }
 
-.ColumnSelectionStep-column-switch {
+.ColumnSelectionStep-td-switch {
   padding: 8px 16px;
   text-align: center;
 }
 
-.ColumnSelectionStep-column-generalization {
-  padding: 0;
-}
-
-.ColumnSelectionStep .GeneralizationControls {
-  margin-left: 16px;
-}
-
-.ColumnSelectionStep .GeneralizationControls label {
-  min-width: 120px;
+.ColumnSelectionStep-td-clear-generalization button {
+  margin-right: 16px;
 }
 
 .ColumnSelectionStep-reserved-space {
   min-height: 700px;
+}
+
+/* GeneralizationControls */
+
+.GeneralizationControls label {
+  min-width: 130px;
+  justify-content: flex-end;
+}
+
+.GeneralizationControls.active label {
+  color: #1890ff;
+  font-weight: 600;
+}
+
+.GeneralizationControls.active .ant-input-number {
+  border: 1px solid #1890ff;
 }
