Change color of suppressed rows

--- a/src/AnonymizationStep/AnonymizedResultsTable.css
+++ b/src/AnonymizationStep/AnonymizedResultsTable.css
@@ -1,3 +1,4 @@
 .AnonymizedResultsTable.combined .AnonymizedResultsTable-row.low-count {
-  color: #ff4d4f;
+  color: #00000073;
+  background-color: #f3f3f3;
 }
