--- a/src/Notebook/Notebook.css
+++ b/src/Notebook/Notebook.css
@@ -1,29 +1,27 @@
-.Notebook .notebook-step {
-  margin: 32px 0;
+.Notebook {
+  display: flex;
+  height: 100%;
 }
 
 .Notebook-nav {
-  position: fixed;
-  top: 40px;
-  left: 0;
-  bottom: 0;
-  width: 350px;
-  padding: 24px;
+  flex: 0 0 350px;
   overflow-y: auto;
+  padding: 24px;
   border-right: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .Notebook-content {
-  padding: 8px 32px;
-  margin-left: 350px;
+  flex: 1 1 auto;
+  overflow-y: scroll;
+  padding: 0 32px 96px 32px;
+}
+
+.Notebook .notebook-step {
+  margin: 32px 0;
 }
 
 @media screen and (max-width: 800px) {
   .Notebook-nav {
     display: none;
-  }
-
-  .Notebook-content {
-    margin-left: 0;
   }
 }
