--- a/src/AnonymizationStep/AnonymizationStep.css
+++ b/src/AnonymizationStep/AnonymizationStep.css
@@ -24,3 +24,7 @@
   background-size: 400% 100%;
   animation: ant-skeleton-loading 1.4s ease infinite;
 }
+
+.AnonymizationExport-reserved-space {
+  min-height: 400px;
+}
