Map markdown components to ant design components

--- a/src/Docs/Markdown.css
+++ b/src/Docs/Markdown.css
@@ -1,5 +1,8 @@
+/* Tables */
+
 .Markdown table {
   border-collapse: collapse;
+  margin-bottom: 1em;
 }
 
 .Markdown table,
@@ -11,4 +14,25 @@
 .Markdown table th,
 .Markdown table td {
   padding: 8px 16px;
+}
+
+.Markdown table th {
+  font-weight: 600;
+}
+
+/* Code */
+
+.Markdown pre.ant-typography > div.ant-typography {
+  margin: 0;
+}
+
+.Markdown pre.ant-typography > div.ant-typography > code {
+  display: block;
+}
+
+/* Blockquotes */
+
+.Markdown blockquote {
+  padding-left: 1em;
+  border-left: 0.25em solid rgba(0, 0, 0, 0.06);
 }
