--- a/src/ColumnSelectionStep/ColumnSelectionStep.css
+++ b/src/ColumnSelectionStep/ColumnSelectionStep.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
+.ColumnSelectionStep-td-count {
+  border-top: 1px solid;
+}
+
 .ColumnSelectionStep-td-clear-generalization button {
   margin-right: 16px;
 }
