Specify top border color for "Count" column cells.

--- a/src/ColumnSelectionStep/ColumnSelectionStep.css
+++ b/src/ColumnSelectionStep/ColumnSelectionStep.css
@@ -31,7 +31,7 @@
 }
 
 .ColumnSelectionStep-td-count {
-  border-top: 1px solid;
+  border-top: 1px solid black;
 }
 
 .ColumnSelectionStep-td-clear-generalization button {
