Fix margins on nested lists

--- a/src/Docs/Markdown.css
+++ b/src/Docs/Markdown.css
@@ -42,3 +42,10 @@
 .Markdown img {
   max-width: 100%;
 }
+
+/* Nested lists */
+
+.Markdown ul.nested,
+.Markdown ol.nested {
+  margin-bottom: 0;
+}
