--- a/src/ColumnSelectionStep/ColumnSelectionStep.css
+++ b/src/ColumnSelectionStep/ColumnSelectionStep.css
@@ -43,6 +43,11 @@
   min-height: 700px;
 }
 
+.ColumnSelectionStep .ColumnSelectionStep-notice {
+  margin-bottom: 16px;
+  max-width: 1000px;
+}
+
 /* GeneralizationControls */
 
 .GeneralizationControls label {
