Adhere to CSS conventions with MissingAidWarning class

--- a/src/AidSelectionStep/AidSelectionStep.css
+++ b/src/AidSelectionStep/AidSelectionStep.css
@@ -10,3 +10,8 @@
   margin-bottom: 16px;
   max-width: 1000px;
 }
+
+.AidSelectionStep .MissingAidWarning {
+  margin-bottom: 16px;
+  max-width: 1000px;
+}
