--- a/src/Notebook/Notebook.css
+++ b/src/Notebook/Notebook.css
@@ -6,3 +6,20 @@
   padding: 0 32px 96px 32px;
   overflow-y: scroll;
 }
+
+.Notebook-sidebar {
+  display: flex;
+}
+
+.Notebook-sidebar-right,
+.Notebook-sidebar-left {
+  display: inline-block;
+}
+
+.Notebook-sidebar .ant-btn {
+  height: 0;
+  width: 0;
+  padding: 0 5px 0 0;
+  display: inline-block;
+  border: none;
+}
