--- a/src/shared/Layout.css
+++ b/src/shared/Layout.css
@@ -8,7 +8,14 @@
 }
 
 .Layout > .Layout-sidebar {
-  flex: 0 0 350px;
+  flex: 0 0 370px;
+  overflow-y: auto;
+  padding: 24px;
+  border-right: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+.Layout > .Layout-sidebar-collapsed {
+  flex: 0 0 100px;
   overflow-y: auto;
   padding: 24px;
   border-right: 1px solid rgba(0, 0, 0, 0.06);
