--- a/src/shared/Layout.css
+++ b/src/shared/Layout.css
@@ -8,17 +8,22 @@
 }
 
 .Layout > .Layout-sidebar {
-  flex: 0 0 370px;
+  flex: 0 0 350px;
   overflow-y: auto;
   padding: 24px;
   border-right: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .Layout > .Layout-sidebar-collapsed {
-  flex: 0 0 100px;
+  flex: 0 0 70px;
   overflow-y: auto;
   padding: 24px;
   border-right: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+.Layout > .Layout-collapse-button .ant-btn {
+  width: 0;
+  border: none;
 }
 
 @media screen and (max-width: 800px) {
